--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,90 @@
 @import url("photographer.css");
 
 body {
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
+  font-family: "DM Sans", sans-serif;
+  margin: 0;
 }
 
-
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 90px;
 }
 
 h1 {
-    color: #901C1C;
-    margin-right: 100px;
+  color: #901c1c;
+  margin-right: 100px;
 }
 
 .logo {
-    height: 50px;
-    margin-left: 100px;
+  height: 50px;
+  margin-left: 100px;
 }
 
 .photographer_section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 70px;
+  margin-top: 100px;
 }
 
 .photographer_section article {
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
 }
 
 .photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+  color: #d3573c;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 400;
+  margin: 20px 0 0 0;
+  padding: 5px 0;
 }
 
 .photographer_section article img {
-    height: 200px;
-    width: 200px;
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
+  flex-shrink: 0;
+}
+
+.img_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #c4c4c4;
+}
+
+.text_container {
+  flex-direction: column;
+  text-align: center;
+}
+
+.text_container p {
+  margin: 0;
+  padding: 2px 0;
+}
+.location {
+  color: #901c1c;
+  font-size: 13px;
+}
+.quote {
+  color: #000;
+  font-size: 10px;
+}
+.price {
+  color: #757575;
+  font-size: 9px;
 }
