--- a/css/photographer.css
+++ b/css/photographer.css
@@ -46,6 +46,7 @@
   font-weight: 700;
   display: flex;
   gap: 25px;
+  z-index: 1;
 }
 #collapse {
   width: 170px;
@@ -72,6 +73,7 @@
   align-items: center;
   position: relative;
   z-index: 1;
+  margin-bottom: 0;
 }
 /* Animation de l'icone  */
 .collapse__chosen__icon {
@@ -88,6 +90,8 @@
 }
 
 .collapse__chosen--open {
+  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+  margin-bottom: 10px;
   height: 60px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -136,8 +140,91 @@
 .medias-section__medias {
   display: grid;
   width: 100%;
-  height: 200px;
-  background-color: red;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 30px;
+  padding-top: 20px;
+}
+
+.media-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.media-card:nth-child(3n + 1) {
+  align-items: flex-start;
+}
+.media-card:nth-child(3n + 2) {
+  align-items: center;
+}
+.media-card:nth-child(3n) {
+  align-items: flex-end;
+}
+
+.media-card__image-container {
+  width: 350px;
+  height: 300px;
+  border-radius: 5px;
+  background: #c4c4c4;
+  position: relative;
+  cursor: pointer;
+}
+.media-card__image-container::before {
+  position: absolute;
+  content: " ";
+  width: 340px;
+  height: 290px;
+  border: 5px solid #db8876;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+.media-card__image-container:hover::before {
+  opacity: 1;
+}
+.media-card__text-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  margin-top: 10px;
+  width: 350px;
+}
+.media-card__text-container__title {
+  color: #901c1c;
+  font-size: 24px;
+  margin: 0;
+}
+.media-card__text-container__likes {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+.media-card__text-container__likes img {
+  width: 21px;
+  height: 24px;
+}
+.media-card__text-container__likes___amount {
+  margin: 0;
+}
+
+aside {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 20px 30px;
+  width: 375px;
+  position: sticky;
+  bottom: 0;
+  left: 100%;
+  background-color: #db8876;
+  font-weight: 500;
+  font-size: 24px;
+}
+aside p {
+  margin: 0;
 }
 
 .modal {
