--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1440px;
+  position: relative;
 }
 
 header {
@@ -62,6 +64,7 @@ button:focus {
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+  position: relative;
 }
 
 .name {
@@ -85,6 +88,20 @@ button:focus {
   border-radius: 50%;
   overflow: hidden;
   background-color: #c4c4c4;
+}
+
+.img_container:before {
+  position: absolute;
+  content: " ";
+  width: 200px;
+  height: 200px;
+  border: 5px solid #db8876;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+.photographer_section article:hover .img_container:before {
+  opacity: 1;
 }
 
 .text_container p {
