--- a/css/photographer.css
+++ b/css/photographer.css
@@ -148,6 +148,7 @@
 .media-card {
   display: flex;
   flex-direction: column;
+  animation: card-fadeIn 500ms forwards;
 }
 
 .media-card:nth-child(3n + 1) {
@@ -294,4 +295,19 @@ form input {
   height: 68px;
   border: none;
   border-radius: 5px;
+}
+
+@keyframes card-fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-500px);
+  }
+  70% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
