--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,13 @@ button:focus {
 .homePage_link {
   height: 50px;
   margin-left: 100px;
-  border-right: 20px solid transparent;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
 }
 
 .homePage_link:hover,
 .homePage_link:focus {
-  border-right-color: #d3573c;
+  transform: scale(1.1);
 }
 
 .photographer_section {
@@ -65,6 +66,12 @@ button:focus {
   flex-direction: column;
   cursor: pointer;
   position: relative;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+}
+
+.photographer_section article:hover {
+  transform: scale(1.1);
 }
 
 .name {
@@ -88,20 +95,6 @@ button:focus {
   border-radius: 50%;
   overflow: hidden;
   background-color: #c4c4c4;
-}
-
-.img_container:before {
-  position: absolute;
-  content: " ";
-  width: 200px;
-  height: 200px;
-  border: 5px solid #db8876;
-  border-radius: 50%;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-.photographer_section article:hover .img_container:before {
-  opacity: 1;
 }
 
 .text_container p {
