--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ button:focus {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 70px;
   margin-top: 100px;
+  padding-bottom: 50px;
 }
 
 .photographer_section article {
