--- a/css/photographer.css
+++ b/css/photographer.css
@@ -195,6 +195,15 @@
   cursor: pointer;
   transform: scale(1);
   transition: transform 0.5s ease-in-out;
+  font-family: Roboto;
+  font-size: 16px;
+  color: #000;
+}
+.media-card__text-container__likes--liked {
+  color: #901c1c;
+  font-family: DM Sans;
+  font-size: 24px;
+  font-weight: 500;
 }
 .media-card__text-container__likes:hover {
   transform: scale(1.2);
