--- a/css/photographer.css
+++ b/css/photographer.css
@@ -161,7 +161,7 @@
   align-items: flex-end;
 }
 
-.media-card__image-container {
+.media-card__media-container {
   width: 350px;
   height: 300px;
   border-radius: 5px;
@@ -170,8 +170,16 @@
   cursor: pointer;
   transform: scale(1);
   transition: transform 0.5s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
-.media-card__image-container:hover {
+.media-card__media-container__image {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.media-card__media-container:hover {
   transform: scale(1.05);
 }
 
