--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,3 @@
-#contact_modal {
-  display: none;
-}
-
 .photograph-header {
   background-color: #fafafa;
   height: 300px;
@@ -174,7 +170,6 @@
   overflow: hidden;
 }
 .media-card__media-container__image {
-  position: absolute;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -257,32 +252,125 @@ aside p {
   align-self: center;
   right: -30px;
 }
+#contact_modal {
+  display: block;
+  width: 670px;
+  height: 900px;
+}
+
+#modal-container {
+  position: absolute;
+  display: none;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(196, 196, 196, 0.4);
+  z-index: 3;
+}
+#lightbox_modal {
+  display: none;
+  position: relative;
+  background-color: #fff;
+  width: 1253px;
+  height: 984px;
+  margin-top: 40px;
+  padding-top: 22px;
+  justify-content: space-between;
+}
+.lightbox__content {
+  display: flex;
+  flex-direction: column;
+}
+.lightbox__content__media-container {
+  width: 1050px;
+  height: 900px;
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #c4c4c4;
+}
+.lightbox__content__media-container img,
+.lightbox__content__media-container video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.lightbox__content__title {
+  color: #901c1c;
+  font-size: 24px;
+}
+
+.lightbox__previous,
+.lightbox__next {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.lightbox__previous img,
+.lightbox__next img {
+  width: 96px;
+  height: 96px;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+}
+.lightbox__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.lightbox__close img {
+  width: 72px;
+  height: 72px;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+}
+
+.lightbox__previous img:hover,
+.lightbox__next img:hover,
+.lightbox__close img:hover {
+  transform: scale(1.2);
+}
 
 .modal {
   border-radius: 5px;
   background-color: #db8876;
-  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 35px;
-  margin: auto;
+  padding: 15px 35px 35px 35px;
+  margin: 70px auto;
+  width: 670px;
 }
 
-.modal header {
-  justify-content: space-between;
+.modal__header {
   width: 100%;
+  position: relative;
 }
 
-.modal header img {
+.modal img {
+  margin-top: 5px;
   cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 72px;
+  height: 72px;
 }
 
-.modal header h2 {
+.modal h2,
+.modal h3 {
+  margin: 0;
   font-size: 64px;
-  font-weight: normal;
-  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 form {
@@ -308,6 +396,13 @@ form div {
 form input {
   width: 100%;
   height: 68px;
+  border: none;
+  border-radius: 5px;
+}
+
+form textarea {
+  width: 100%;
+  height: 170px;
   border: none;
   border-radius: 5px;
 }
