--- a/css/photographer.css
+++ b/css/photographer.css
@@ -174,7 +174,8 @@
   width: 100%;
   height: 100%;
 }
-.media-card__media-container:hover {
+.media-card__media-container:hover,
+.media-card__media-container:active {
   transform: scale(1.05);
 }
 
